--- a/indext.html
+++ b/indext.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <body>
+	<title>"Titre du site"</title>
 <h1>"hello je suis h1"</h1>
 <h2>"bonjour je suis h2"</h2>
 <h3>" Hola je suis h3"</h3>
