--- a/intégration/test2.html
+++ b/intégration/test2.html
@@ -2,6 +2,11 @@
 <head>
 <head/>
 <body>
-<h1>Votre mission<h1/>
-<h6>Je suis James Bond<h6/>
+
+<h1>Votre mission</h1>
+<p>Je suis James Bond</p>`
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/fY0L2ewWK4w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 <body/>
+<html/>
